# wasm-example

./: .gitignore  README.md  build.sh  build_bindgen.sh  build_go.sh  index.html  index_bindgen.html  index_go.html  run.py  run.sh
go/: go.mod  main.go
rust/: Cargo.toml
rust/src/: lib.rs
rust_bindgen/: Cargo.toml
rust_bindgen/src/: lib.rs
web/: index.html
