[package]
name = "wasm-example-bindgen"
version = "0.1.0"
authors = ["Mikhail Medvedev <mmedvedev@tenable.com>"]
edition = "2018"

[lib]
name = "wasm_example_bindgen"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-mutable-globals"]
